大湾区之声 [中央广播电视总台粤港澳大湾区之声] [CMG Radio The Greater Bay]

--- a/National/中国之声.yml
+++ b/National/中国之声.yml
@@ -5,7 +5,7 @@ schedule: https://zh.wikipedia.org/wiki/中央人民广播电台中国之声#节
 logo: https://cnvod.cnr.cn/audio2017/ondemand/media/1100/20210425/1619317448858.jpg
 source-url: https://ngcdn002.cnr.cn/live/zgzs/index.m3u8
 source-type: hls
-location: CN-BJ
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
