--- a/National/神州之声.yml
+++ b/National/神州之声.yml
@@ -5,7 +5,7 @@ schedule: https://zh.wikipedia.org/wiki/中央人民广播电台神州之声#主
 logo: https://ytmedia.radio.cn/CCYT%2F202306%2F12%2F18%2F22NcNJxAjbe3NgbLCNZfH6fWW2q6VhCo2W2023061218376.jpg
 source-url: https://ngcdn006.cnr.cn/live/szzs/index.m3u8
 source-type: hls
-location: CN-BJ
+location: CN; CN-BJ
 language: chi; nan (ISO 639-3); hak (ISO 639-3)
 timezone: Asia/Shanghai
 note: nan (ISO 639-3) 和 hak (ISO 639-3) 是方言，在 MARC 中没有被定义。
