--- a/National/台海之声.yml
+++ b/National/台海之声.yml
@@ -5,7 +5,7 @@ schedule: https://zh.wikipedia.org/wiki/中央广播电视总台台海之声#主
 logo: https://ytmedia.radio.cn/CCYT%2F202306%2F12%2F18%2FTmqb0FNuYzW6u5Ym7LhxxSemBelX3h7I70gh2023061218805.jpg
 source-url: https://ngcdn005.cnr.cn/live/zhzs/index.m3u8
 source-type: hls
-location: CN-BJ
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
