--- a/National/经济之声.yml
+++ b/National/经济之声.yml
@@ -5,7 +5,7 @@ schedule: https://zh.wikipedia.org/wiki/中央人民广播电台经济之声#节
 logo: https://upload.wikimedia.org/wikipedia/zh/4/4a/经济之声.jpg
 source-url: https://ngcdn002.cnr.cn/live/jjzs/index.m3u8
 source-type: hls
-location: CN-BJ
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
