update "哈语广播" and "中国乡村之声"

--- a/National/中国之声.yml
+++ b/National/中国之声.yml
@@ -1,4 +1,4 @@
-title: 中国之声 [中央人民广播电台中国之声] [The Voice of China] [CNR-1] （第一个标题是主标题，之后 [] 里面的标题是备用标题/别名）
+title: 中国之声 [中央人民广播电台中国之声] [The Voice of China] [CNR-1] #（第一个标题是主标题，之后 [] 里面的标题是备用标题/别名）
 description: 中央广播电视总台央广中国之声，简称中国之声。是中华人民共和国发展最早、影响力最大的广播频率之一。
 homepage: http://china.cnr.cn
 schedule: https://zh.wikipedia.org/wiki/中央人民广播电台中国之声#节目编排
