--- a/National/中国乡村之声.yml
+++ b/National/中国乡村之声.yml
@@ -1,4 +1,4 @@
-title: 中国乡村之声
+title: 中国乡村之声 [中央人民广播电台中国乡村之声]
 description: 中央人民广播电台中国乡村之声为全国性对农公益广播。立足公益性，突出服务性，强化实用性，全天24小时播出谈话类、信息类、服务类和文娱类的广播节目。
 homepage: 
 schedule: 
