--- a/National/哈语广播.yml
+++ b/National/哈语广播.yml
@@ -1,7 +1,7 @@
-title: 哈语广播
+title: 哈语广播 [中央广播电视总台哈萨克语广播]
 description: 中央广播电视总台哈萨克语广播，哈萨克语广播强化服务功能，节目影响不断扩大，深受哈萨克族听众的喜爱。
-homepage: 
-schedule: 
+homepage: http://www.kazakcnr.com
+schedule: https://zh.wikipedia.org/zh/中央人民广播电台哈萨克语广播
 logo: https://cnvod.cnr.cn/audio2016/default/2014/12/29/1419837253068.jpg
 source-url: https://ngcdn025.cnr.cn/live/hygb/index.m3u8
 source-type: hls
@@ -9,5 +9,5 @@ location: CN;
 language: chi
 timezone: Asia/Shanghai
 note: 
-Suggested ID: radio-
-submitted: no
+Suggested ID: radio-Ha-Yu-Guang-Bo
+submitted: yes
