update locations for National radios

--- a/National/哈语广播.yml
+++ b/National/哈语广播.yml
@@ -5,7 +5,7 @@ schedule: https://zh.wikipedia.org/zh/中央人民广播电台哈萨克语广播
 logo: https://cnvod.cnr.cn/audio2016/default/2014/12/29/1419837253068.jpg
 source-url: https://ngcdn025.cnr.cn/live/hygb/index.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
