--- a/National/HITFM国际流行音乐.yml
+++ b/National/HITFM国际流行音乐.yml
@@ -5,7 +5,7 @@ schedule:
 logo: https://cnvod.cnr.cn/audio2017/ondemand/img/1100/20191227/1577439531060.png
 source-url: https://cnlive.cnr.cn/hls/HITFM.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
