--- a/National/中国乡村之声.yml
+++ b/National/中国乡村之声.yml
@@ -5,7 +5,7 @@ schedule:
 logo: https://cnvod.cnr.cn/audio2017/ondemand/media/1100/20210425/1619318057428.jpg
 source-url: https://ngcdn017.cnr.cn/live/xczs/index.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
