--- a/National/中国交通广播.yml
+++ b/National/中国交通广播.yml
@@ -5,7 +5,7 @@ schedule:
 logo: https://cnvod.cnr.cn/audio2017/ondemand/img/1100/20221211/1670743148470.jpg
 source-url: https://ngcdn016.cnr.cn/live/gsgljtgb/index.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
