--- a/National/环球资讯广播.yml
+++ b/National/环球资讯广播.yml
@@ -5,7 +5,7 @@ schedule:
 logo: https://cnvod.cnr.cn/audio2017/ondemand/img/1100/20200306/1583464064428.jpg
 source-url: https://cnlive.cnr.cn/hls/huanqiuzixunguangbo.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
