--- a/National/英语资讯广播 CGTN Radio.yml
+++ b/National/英语资讯广播 CGTN Radio.yml
@@ -5,7 +5,7 @@ schedule:
 logo: https://cnvod.cnr.cn/audio2017/ondemand/media/1100/20211222/1640137536123.jpg
 source-url: https://cnlive.cnr.cn/hls/yyzxgb.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
