--- a/National/阅读之声.yml
+++ b/National/阅读之声.yml
@@ -5,7 +5,7 @@ schedule:
 logo: https://cnvod.cnr.cn/audio2017/ondemand/img/1100/20191015/1571132054820.png
 source-url: https://ngcdn014.cnr.cn/live/ylgb/index.m3u8
 source-type: hls
-location: CN;
+location: CN; CN-BJ
 language: chi
 timezone: Asia/Shanghai
 note: 
